--- a/pages/resume.html
+++ b/pages/resume.html
@@ -9,17 +9,17 @@
 <header>
     <nav>
         <ul>
-            <li><a href="index.html">Главная</a></li>
+            <li><a href="../index.html">Главная</a></li>
             <li><a href="/pages/resume.html">Резюме</a>
                 <ul>
-                    <li><a href="index.html">Образование</a></li>
-                    <li><a href="index.html">Спорт</a></li>
-                    <li><a href="index.html">Увлечение</a></li>
+                    <li><a href="../index.html">Образование</a></li>
+                    <li><a href="../index.html">Спорт</a></li>
+                    <li><a href="../index.html">Увлечение</a></li>
                 </ul>
             </li>
-            <li><a href="index.html">Галерея</a></li>
-            <li><a href="index.html">Работы</a></li>
-            <li><a href="index.html">Игра</a></li>
+            <li><a href="../index.html">Галерея</a></li>
+            <li><a href="../index.html">Работы</a></li>
+            <li><a href="../index.html">Игра</a></li>
             <li><a href="#">Войти</a></li>
         </ul>
     </nav>
