--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Главная</a></li>
-            <li><a href="/pages/resume.html">Резюме</a>
+            <li><a href="pages/resume.html">Резюме</a>
                 <ul>
                     <li><a href="index.html">Образование</a></li>
                     <li><a href="index.html">Спорт</a></li>
