--- a/pages/resume.html
+++ b/pages/resume.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>TrahOff</title>
     <link href="/style/main.css" type="text/css" rel="stylesheet">
+    <link href="/style/resume.css" type="text/css" rel="stylesheet">
+
 </head>
 <body>
 <header>
@@ -12,20 +14,103 @@
             <li><a href="../index.html">Главная</a></li>
             <li><a href="/pages/resume.html">Резюме</a>
                 <ul>
-                    <li><a href="../index.html">Образование</a></li>
-                    <li><a href="../index.html">Спорт</a></li>
-                    <li><a href="../index.html">Увлечение</a></li>
+                    <li><a href="/pages/resume.html#study">Образование</a></li>
+                    <li><a href="/pages/resume.html#sport">Спорт</a></li>
+                    <li><a href="/pages/resume.html#hobby">Увлечение</a></li>
                 </ul>
             </li>
-            <li><a href="../index.html">Галерея</a></li>
-            <li><a href="../index.html">Работы</a></li>
-            <li><a href="../index.html">Игра</a></li>
-            <li><a href="#">Войти</a></li>
+            <li><a href="/pages/gallery.html">Галерея</a></li>
+            <li><a href="/pages/works.html">Работы</a></li>
+            <li><a href="/pages/game.html">Игра</a></li>
+            <li><a href="/pages/login.html">Войти</a></li>
         </ul>
     </nav>
 </header>
 <main>
-Образование
+    <h2>Образование</h2>
+    <div id="#study">
+        <div class="img">
+            <img src="/imgs/112025_big.jpg">
+            <img src="/imgs/DSC_9905.jpg">
+            <img src="/imgs/m29wG13JQ1.jpg">
+        </div>
+        <div class="text">
+            <b>Школа №51 им А.М. Аблукова</b><br><br>
+            Первые 6 лет получения образования я учился в Школе №51 им А.М. Аблукова.
+            Она находится в районе, в котором я живу, поэтому дойти туда для меня не было особым трудом.
+            Но, после инцидента, в котором меня подозревали, но я не имел к нему никакого отношения
+            (я был в другом городе, когда всё случилось)
+            меня перевели в Гимназию<br><br><br>
+            <b>Гимназия №1 им В.И. Ленина</b><br><br>
+            После 51 школы я учился в Гимназии №1 им В.И. Ленина.
+            Я доучился до 9 класса, после поступил в 10-11 на техническое направление.
+            Меня привлекло программирование, поэтому для себя я решил, что буду заниматься кодом.<br><br><br>
+            <b>Ульяновский Государственный Технический Университет</b><br><br>
+            Сейчас я учусь в Ульяновском Государственном Техническом Университете на факультете ФИСТ,
+            направлении ИВТ (информатика и вычислительная техника).
+        </div>
+    </div>
+    <h2>спорт</h2>
+    <div id="sport">
+            <div class="img">
+                <img src="/imgs/basket.jpg">
+                <img src="/imgs/M0YmLuIp6q0%20(2).jpg">
+                <img src="/imgs/WI636iGBpr4%20(2).jpg">
+            </div>
+            <div class="text">
+                <b>баскетбол</b><br><br>
+                Баскетбол (англ. basket «корзина» + ball «мяч») — спортивная командная игра с мячом,
+                в которой мяч забрасывают руками в кольцо соперника.
+                В баскетбол играют две команды, каждая из которых состоит из пяти полевых игроков (замены не ограничены).
+                Цель каждой команды — забросить мяч в кольцо с сеткой (корзину) соперника и помешать другой команде
+                завладеть мячом и забросить его в свою корзину.
+                Корзина находится на высоте 3,05 м от паркета (10 футов).
+                За мяч, заброшенный с ближней и средней дистанций, засчитывается два очка, с дальней
+                (из-за трёхочковой линии) — три очка; штрафной бросок оценивается в одно очко.
+                Стандартный размер баскетбольной площадки — 28 м в длину и 15 м — в ширину.
+                Баскетбол — один из самых популярных видов спорта в мире.<br><br><br>
+                <b>Лёгкая атлетика</b><br><br>
+                Лёгкая атлетика — олимпийский вид спорта, включающий бег, ходьбу, прыжки и метания.
+                Объединяет следующие дисциплины:
+                беговые виды, спортивную ходьбу, технические виды (прыжки и метания),
+                многоборья, пробеги (бег по шоссе) и кроссы (бег по пересечённой местности).<br><br><br>
+                <b>Бальные танцы</b><br><br>
+                Спортивно-бальные танцы — группа различных парных танцев, некоторые из которых имеют народные истоки.
+                Исполнялись на балах, которые проводились в помещениях, застеленных паркетом.
+                Из огромного разнообразия как элитных (историко-бытовых), так и народных танцев в группу бальных попали
+                танцы, характеризующиеся 2 признаками: все бальные танцы являются парными.
+                Пару составляют мужчина и женщина.
+            </div>
+    </div>
+    <h2>увлечения</h2>
+    <div id="hobby">
+        <div class="img">
+            <img src="/imgs/wallpapersden.com_charlie-chaplin-camera-bowler-hat_7680x4320.jpg">
+            <img src="/imgs/slushat-muzyku-shanson.jpg">
+            <img src="/imgs/scale_1200.jpg">
+        </div>
+        <div class="text">
+            Мои увлечения не сильно отличаются от увлечений других ребят.
+            Я люблю поиграть, слушать музыку и смотреть фильмы, аниме или мультфильмы.
+            <br><b>Мои любимые исполнители</b>
+            <nav>
+                <li><a href="https://vk.com/artist/gone_fludd">GONE.Fludd</a></li>
+                <li><a href="https://vk.com/artist/cakeboy">CAKEBOY</a></li>
+                <li><a href="https://vk.com/artist/iroh">IROH</a></li>
+                <li><a href="https://vk.com/artist/flipperfloyd">flipper floyed</a></li>
+                <li><a href="https://vk.com/artist/miyagi_andypanda">Miyagi & Andy panda</a></li>
+                <li><a href="https://vk.com/artist/kloukoma">КлоуКома</a></li>
+            </nav>
+            <br><b>Мои любимы аниме и фильмы</b>
+            <nav>
+                <li><a href="https://animego.org/anime/dr-stone-2v-1105">Доктор Стоун</a></li>
+                <li><a href="https://animego.org/anime/naruto-102">Наруто</a></li>
+                <li><a href="https://animego.org/anime/tokiyskie-mstiteli-1758">Токийские Мстители</a></li>
+                <li><a href="https://marvel.com.ru/">Фильмы MARVEL</a></li>
+            </nav>
+            <Br>так же, кроме того, что я слушаю музыку, иногда я её делаю ради своего удовольствия.
+        </div>
+    </div>
 </main>
 <footer>
     2022 год<br>
