--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
             <li><a href="index.html">Главная</a></li>
             <li><a href="pages/resume.html">Резюме</a>
                 <ul>
-                    <li><a href="index.html">Образование</a></li>
-                    <li><a href="index.html">Спорт</a></li>
-                    <li><a href="index.html">Увлечение</a></li>
+                    <li><a href="pages/resume.html#hobby">Образование</a></li>
+                    <li><a href="pages/resume.html#sport">Спорт</a></li>
+                    <li><a href="pages/resume.html#hobby">Увлечение</a></li>
                 </ul>
             </li>
-            <li><a href="index.html">Галерея</a></li>
-            <li><a href="index.html">Работы</a></li>
-            <li><a href="index.html">Игра</a></li>
-            <li><a href="#">Войти</a></li>
+            <li><a href="pages/gallery.html">Галерея</a></li>
+            <li><a href="pages/works.html">Работы</a></li>
+            <li><a href="pages/game.html">Игра</a></li>
+            <li><a href="pages/login.html">Войти</a></li>
         </ul>
     </nav>
 </header>
