--- a/pages/resume.html
+++ b/pages/resume.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>TrahOff</title>
-    <link href="/style/main.css" type="text/css" rel="stylesheet">
-    <link href="/style/resume.css" type="text/css" rel="stylesheet">
+    <link href="../style/main.css" type="text/css" rel="stylesheet">
+    <link href="../style/resume.css" type="text/css" rel="stylesheet">
 
 </head>
 <body>
@@ -12,17 +12,17 @@
     <nav>
         <ul>
             <li><a href="../index.html">Главная</a></li>
-            <li><a href="/pages/resume.html">Резюме</a>
+            <li><a href="../pages/resume.html">Резюме</a>
                 <ul>
-                    <li><a href="/pages/resume.html#study">Образование</a></li>
-                    <li><a href="/pages/resume.html#sport">Спорт</a></li>
-                    <li><a href="/pages/resume.html#hobby">Увлечение</a></li>
+                    <li><a href="../pages/resume.html#study">Образование</a></li>
+                    <li><a href="../pages/resume.html#sport">Спорт</a></li>
+                    <li><a href="../pages/resume.html#hobby">Увлечение</a></li>
                 </ul>
             </li>
-            <li><a href="/pages/gallery.html">Галерея</a></li>
-            <li><a href="/pages/works.html">Работы</a></li>
-            <li><a href="/pages/game.html">Игра</a></li>
-            <li><a href="/pages/login.html">Войти</a></li>
+            <li><a href="../pages/gallery.html">Галерея</a></li>
+            <li><a href="../pages/works.html">Работы</a></li>
+            <li><a href="../pages/game.html">Игра</a></li>
+            <li><a href="../pages/login.html">Войти</a></li>
         </ul>
     </nav>
 </header>
@@ -30,9 +30,9 @@
     <h2>Образование</h2>
     <div id="#study">
         <div class="img">
-            <img src="/imgs/112025_big.jpg">
-            <img src="/imgs/DSC_9905.jpg">
-            <img src="/imgs/m29wG13JQ1.jpg">
+            <img src="../imgs/112025_big.jpg">
+            <img src="../imgs/DSC_9905.jpg">
+            <img src="../imgs/m29wG13JQ1.jpg">
         </div>
         <div class="text">
             <b>Школа №51 им А.М. Аблукова</b><br><br>
@@ -53,9 +53,9 @@
     <h2>спорт</h2>
     <div id="sport">
             <div class="img">
-                <img src="/imgs/basket.jpg">
-                <img src="/imgs/M0YmLuIp6q0%20(2).jpg">
-                <img src="/imgs/WI636iGBpr4%20(2).jpg">
+                <img src="../imgs/basket.jpg">
+                <img src="../imgs/M0YmLuIp6q0%20(2).jpg">
+                <img src="../imgs/WI636iGBpr4%20(2).jpg">
             </div>
             <div class="text">
                 <b>баскетбол</b><br><br>
@@ -85,9 +85,9 @@
     <h2>увлечения</h2>
     <div id="hobby">
         <div class="img">
-            <img src="/imgs/wallpapersden.com_charlie-chaplin-camera-bowler-hat_7680x4320.jpg">
-            <img src="/imgs/slushat-muzyku-shanson.jpg">
-            <img src="/imgs/scale_1200.jpg">
+            <img src="../imgs/wallpapersden.com_charlie-chaplin-camera-bowler-hat_7680x4320.jpg">
+            <img src="../imgs/slushat-muzyku-shanson.jpg">
+            <img src="../imgs/scale_1200.jpg">
         </div>
         <div class="text">
             Мои увлечения не сильно отличаются от увлечений других ребят.
